# Deep-Education-GPU

./: README.md
dl_python_code/: GCN_pubmed.py  create_graph.py  gcnconv.py  gp_apis.py  pubmed_util.py
kernel/: CMakeLists.txt  Makefile  invoke.h  kernel.cu  kernel.h  kernel_pybind.cpp  op.h
